Fixed small gap at bottom of screen

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -41,8 +41,8 @@ html {
 
 .wiscviewer-content-container {
   height: 100%;
-  margin-top: -52px;
-  padding-top: 52px;
+  margin-top: -50px;
+  padding-top: 50px;
 }
 
 .wiscviewer-map-container {
